feat: ✨ unsubscribe button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <h1>Ejemplo de web push</h1>
     <button id="notifyButton">Enviar Notificación</button>
+    <button id="unsubscribeButton">Desuscribirse</button>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
